--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
   <script src="https://cdn.staticfile.org/docsify/4.12.2/plugins/search.min.js"></script>
 
   <!-- support mermaid following https://docsify.js.org/#/markdown?id=supports-mermaid -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  <script src="https://cdn.staticfile.org/mermaid/8.13.10/mermaid.min.js"></script>
   <script>
     var num = 0;
     mermaid.initialize({ startOnLoad: false });
